plugins {
    id 'java'
    id 'maven-publish'
}

group = 'com.flyaway.timereward'
version = '1.1.3'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.nightexpressdev.com/releases'}
    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
    maven { url = 'https://repo.essentialsx.net/releases/' }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT'
    compileOnly 'su.nightexpress.coinsengine:CoinsEngine:2.5.0'
    compileOnly 'net.essentialsx:EssentialsX:2.21.2'
}

tasks.jar {
    archiveBaseName.set("TimeReward")
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
        }
    }
}
